fix(styles): header text is now a link. onboarding misaligned buttons.

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -24,6 +24,11 @@
   font-size: 18px;
   margin-left: 15px;
   font-weight: bold;
+  color: $color-primary-font;
+
+  &:hover {
+    color: $color-primary-font;
+  }
 
   @media (max-width: 600px) {
     display: none;
@@ -31,13 +36,14 @@
 }
 
 .header-logo {
-  display: inline-block;
-  height: 65%;
+  display: flex;
+  align-items: center;
+  height: 32px;
   margin: 0;
-}
 
-.header-logo img {
-  height: 100%;
+  img {
+    height: 100%;
+  }
 }
 
 .header-actions {
