--- a/src/components/modal/onboarding/onboarding.module.scss
+++ b/src/components/modal/onboarding/onboarding.module.scss
@@ -13,8 +13,11 @@
 }
 
 .onboarding-btn {
+  display: flex;
+  align-items: center;
+
   svg {
-    top: 1px;
+    top: 0;
   }
 
   [data-icon='search'] {
