--- a/src/pages/login/login.module.scss
+++ b/src/pages/login/login.module.scss
@@ -149,7 +149,7 @@ $active-bg-color: #ffc7c1;
   color: $color-primary-font;
   font-weight: 600;
   width: 100%;
-  max-width: 340px;
+  max-width: 360px;
   margin: 20px auto;
   text-align: left;
 
